<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="app_name">Kulinaria</string>
	
	<string name="language">en</string>
	<string name="simpleDateFormat">dd/MM/yyyy</string>
	<string name="extendedDateFormat">EEEE, dd MMMM yyyy</string>
	
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	
	<string name="buttonYes">Yes</string>
	<string name="buttonNo">No</string>
	<string name="buttonSave">Save</string>
	<string name="buttonCancel">Cancel</string>
	<string name="buttonDelete">Delete</string>
	<string name="buttonClose">Close</string>
	<string name="dialogAreYouSure">Are you sure?</string>
	
	<string name="menuPage">Menu</string>
	<string name="menuDailyMenu">Daily menu</string>
	<string name="menuTodaysMenu">Today\'s menu</string>
	<string name="menuDate">Date</string>
	<string name="menuDish">Dish</string>
	<string name="menuMeal">Meal</string>
	<string name="menuRecipe">Recipe</string>
	<string name="menuDishAdd">Add dish</string>
	<string name="menuDishEatDrink">Eat/drink !</string>
	<string name="menuDishDelete">Delete dish</string>
	<string name="menuDishAdded">Added ? for ?</string>
	<string name="menuDishEatenDrunk">You have eaten/drunk a ?</string>
	<string name="menuDishDeleted">Dish ? deleted</string>
	<string name="menuDishDeleteQuestion">Are you sure you want to delete this dish?</string>
	<string name="menuDishCantEatDrink">You don\'t have enough ingredient to eat/drink this dish</string>
	<string name="menuDishEatDrinkAnyway">Eat/drink anyway</string>
	
	<string name="inventoryPage">Inventory</string>
	<string name="inventoryNoIngredients">No ingredients in inventory</string>
	<string name="ingredientAdd">Add ingredient</string>
	<string name="ingredientUpdate">Update ingredient</string>
	<string name="ingredientDelete">Delete ingredient</string>
	<string name="ingredientOptions">Ingredient options</string>
	<string name="ingredientName">Name</string>
	<string name="ingredientQuantity">Quantity</string>
	<string name="ingredientUnit">Unit</string>
	<string name="ingredientExpirationDate">Expiration date</string>
	<string name="ingredientExpirationDateNoExpiry">No expiry</string>
	<string name="ingredientRemoveExpirationDate">Remove expiration date</string>
	<string name="ingredientAdded">Added ingredient ?</string>
	<string name="ingredientUpdated">Ingredient ? updated</string>
	<string name="ingredientDeleted">Ingredient ? deleted</string>
	<string name="ingredientAlreadyExists">Ingredient ? already exists. Do you want to upgrade quantities?</string>
	<string name="ingredientDeleteQuestion">Are you sure you want to delete the ingredient?</string>
	
	<string name="recipesPage">Recipes</string>
	<string name="recipesNoRecipes">No recipes found for this dish</string>
	<string name="recipesSearch">Search a recipe</string>
	<string name="recipesNumber">\? recipes found</string>
	<string name="recipesBack">Back to dishes list</string>
	<string name="recipeDish">Dish:</string>
	<string name="recipePreparationTime">Preparation time:</string>
	<string name="recipeReadyTime">Ready time:</string>
	<string name="recipeServings">Servings:</string>
	<string name="recipeIngredients">Ingredients:</string>
	<string name="recipeReadyIn">Ready in ?</string>
	
	<string name="shoppingListPage">Shopping List</string>
	<string name="shoppingListGroupBy">Group by:</string>
	<string name="shoppingListNoIngredients">No ingredients in shopping list</string>
	
</resources>